added map, report and logging (#4)
* add hibernate

* add more tests and scripts for database

* add logging and (broken) report service

* fix report service

* add basic impl of map

* fix error messages

* add routing api